--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -1,12 +1,12 @@
 ﻿<Application x:Class="Neurotoxin.Godspeed.Shell.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
              xmlns:shell="clr-namespace:Microsoft.Windows.Shell;assembly=Microsoft.Windows.Shell"
              xmlns:co="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:constants="clr-namespace:Neurotoxin.Godspeed.Shell.Constants"
-             xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters">
+             xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
+             xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -36,17 +36,15 @@
                     <system:Boolean x:Key="True">True</system:Boolean>
 
                     <!-- Window -->
-                    <Style TargetType="{x:Type controls:BorderlessWindow}" x:Key="Window">
+                    <Style TargetType="{x:Type primitives:BorderlessWindow}" x:Key="Window">
                         <Setter Property="shell:WindowChrome.WindowChrome">
                             <Setter.Value>
                                 <shell:WindowChrome ResizeBorderThickness="6" CaptionHeight="27" CornerRadius="0" GlassFrameThickness="0,0,0,1"/>
                             </Setter.Value>
                         </Setter>
-                        <Setter Property="Icon" Value="pack://application:,,,/Neurotoxin.Godspeed.Shell;component/Resources/icon.ico"/>
-                        <Setter Property="SnapsToDevicePixels" Value="True"/>
                         <Setter Property="Template">
                             <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type controls:BorderlessWindow}">
+                                <ControlTemplate TargetType="{x:Type primitives:BorderlessWindow}">
                                     <Border Background="{StaticResource ControlBackgroundBrush}" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}">
                                         <Grid x:Name="Head">
                                             <Grid.ColumnDefinitions>
@@ -63,7 +61,7 @@
                                             <TextBlock Text="{TemplateBinding Title}" Grid.Column="1" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
                                             <TextBlock Text="{TemplateBinding Title}" Grid.Column="1" VerticalAlignment="Center" Margin="-1,-1,1,1" Foreground="{StaticResource NormalBrush}" FontWeight="Bold"/>
 
-                                            <controls:CaptionButtons Margin="0,0,5,0" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Type="Full"
+                                            <primitives:CaptionButtons Margin="0,0,5,0" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Type="Full"
                                                                      Foreground="{DynamicResource CaptionButtonColor}" FontSize="14" MarginButton="0,0,5,0"
                                                                      VerticalAlignment="Center" shell:WindowChrome.IsHitTestVisibleInChrome="True"/>
 
@@ -81,22 +79,17 @@
                     </Style>
 
                     <!-- Dialog -->
-                    <Style TargetType="{x:Type controls:DialogBase}" x:Key="Dialog">
+                    <Style TargetType="{x:Type primitives:DialogBase}" x:Key="Dialog">
                         <Setter Property="shell:WindowChrome.WindowChrome">
                             <Setter.Value>
                                 <shell:WindowChrome ResizeBorderThickness="0" CaptionHeight="24" CornerRadius="0" GlassFrameThickness="0,0,0,1"/>
                             </Setter.Value>
                         </Setter>
-                        <Setter Property="Icon" Value="pack://application:,,,/Neurotoxin.Godspeed.Shell;component/Resources/icon.ico"/>
-                        <Setter Property="SnapsToDevicePixels" Value="True"/>
                         <Setter Property="AllowsTransparency" Value="True"/>
                         <Setter Property="WindowStyle" Value="None"/>
-                        <Setter Property="ResizeMode" Value="NoResize"/>
-                        <!--<Setter Property="Topmost" Value="True"/>-->
-                        <Setter Property="SizeToContent" Value="Height"/>
                         <Setter Property="Template">
                             <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type controls:DialogBase}">
+                                <ControlTemplate TargetType="{x:Type primitives:DialogBase}">
                                     <AdornerDecorator>
                                         <Border Background="{StaticResource ControlBackgroundBrush}" BorderThickness="1" BorderBrush="{StaticResource NormalBorderBrush}" Margin="5">
                                             <Border.Effect>
@@ -117,7 +110,7 @@
                                                 <TextBlock Text="{TemplateBinding Title}" Grid.Column="1" VerticalAlignment="Center" Foreground="White" FontWeight="Bold"/>
                                                 <TextBlock Text="{TemplateBinding Title}" Grid.Column="1" VerticalAlignment="Center" Margin="-1,-1,1,1" Foreground="{StaticResource NormalBrush}" FontWeight="Bold"/>
 
-                                                <controls:CaptionButtons Margin="0,0,5,0" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Type="Close"
+                                                <primitives:CaptionButtons Margin="0,0,5,0" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" Type="Close"
                                                                          Foreground="{DynamicResource CaptionButtonColor}" FontSize="14" MarginButton="0,0,5,0"
                                                                          VerticalAlignment="Center" shell:WindowChrome.IsHitTestVisibleInChrome="True"
                                                                          x:Name="CaptionButtons"/>
