--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Primitives/CaptionButtons.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Primitives/CaptionButtons.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Neurotoxin.Godspeed.Presentation.Controls.CaptionButtons"
+﻿<UserControl x:Class="Neurotoxin.Godspeed.Shell.Primitives.CaptionButtons"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
