--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ConfirmationDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ConfirmationDialog.xaml
@@ -1,9 +1,8 @@
-﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ConfirmationDialog"
-                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                           Width="400" WindowStartupLocation="CenterOwner"
-                           Style="{StaticResource Dialog}">
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.ConfirmationDialog"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       Width="400" WindowStartupLocation="CenterOwner">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -22,4 +21,4 @@
         <Button Grid.Column="2" Grid.Row="1" Content="No" Margin="5" x:Name="Cancel" Click="CancelButtonClick"/>
 
     </Grid>
-</controls:DialogBase>
+</primitives:DialogBase>
