--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/InputDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/InputDialog.xaml
@@ -1,8 +1,8 @@
-﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.InputDialog"
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.InputDialog"
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                     Style="{StaticResource Dialog}" Width="400" WindowStartupLocation="CenterOwner">
+                     xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                     Width="400" WindowStartupLocation="CenterOwner">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -30,4 +30,4 @@
         <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" Click="CancelButtonClick"/>
 
     </Grid>
-</controls:DialogBase>
+</primitives:DialogBase>
