--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewVersionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewVersionDialog.xaml
@@ -1,9 +1,9 @@
-﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewVersionDialog"
-                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                           Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner"
-                           Style="{StaticResource Dialog}" Title="New version available">
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewVersionDialog"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner"
+                       Title="New version available">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -22,4 +22,4 @@
         <Button Grid.Column="2" Grid.Row="1" Content="Cancel" Margin="5" x:Name="Cancel" Click="CancelButtonClick" Width="80"/>
         
     </Grid>
-</controls:DialogBase>
+</primitives:DialogBase>
