--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/WriteErrorDialog.xaml
@@ -1,10 +1,9 @@
-﻿<controls:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.WriteErrorDialog"
-                           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                           xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
-                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
-                           Width="400" WindowStartupLocation="CenterOwner" Title="Target already exists"
-                           Style="{StaticResource Dialog}">
+﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.WriteErrorDialog"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       Width="400" WindowStartupLocation="CenterOwner" Title="Target already exists">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -40,4 +39,4 @@
         <Button Grid.Column="2" Grid.Row="4" Content="Cancel" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
 
     </Grid>
-</controls:DialogBase>
+</primitives:DialogBase>
