--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/FileManagerWindow.xaml
@@ -1,14 +1,14 @@
-﻿<controls:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.FileManagerView"
+﻿<primitives:BorderlessWindow x:Class="Neurotoxin.Godspeed.Shell.Views.FileManagerWindow"
                            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                            xmlns:inf="clr-namespace:Neurotoxin.Godspeed.Presentation.Infrastructure;assembly=Neurotoxin.Godspeed.Presentation"
-                           xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
                            xmlns:views="clr-namespace:Neurotoxin.Godspeed.Shell.Views"
                            xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                            xmlns:commands="clr-namespace:Neurotoxin.Godspeed.Shell.Commands"
                            xmlns:ts="clr-namespace:Neurotoxin.Godspeed.Shell.Views.TemplateSelectors"
-                           Style="{StaticResource Window}" Width="950" Height="600">
-    <controls:BorderlessWindow.Resources>
+                           xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                           Width="950" Height="600">
+    <primitives:BorderlessWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Themes/ExpressionLight.xaml"/>
@@ -33,7 +33,7 @@
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </controls:BorderlessWindow.Resources>
+    </primitives:BorderlessWindow.Resources>
 
     <Grid x:Name="LayoutRoot">
         <Grid Margin="3">
@@ -43,15 +43,34 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-
-            <ContentControl Grid.Column="0" Grid.Row="0" Content="{Binding LeftPane}" ContentTemplateSelector="{StaticResource TemplateSelector}" x:Name="LeftPane"/>
-            <GridSplitter Grid.Column="1"/>
-            <ContentControl Grid.Column="2" Grid.Row="0" Content="{Binding RightPane}" ContentTemplateSelector="{StaticResource TemplateSelector}" x:Name="RightPane"/>
             
-            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="0,3,0,0">
+            <Menu Grid.ColumnSpan="3">
+                <Menu.Resources>
+                    <Style TargetType="MenuItem">
+                        <Setter Property="Margin" Value="0"></Setter>
+                    </Style>
+                </Menu.Resources>
+                <MenuItem Header="Files">
+                    <MenuItem Command="{x:Static commands:FileManagerCommands.ExitCommand}"/>
+                </MenuItem>
+                <MenuItem Header="Commands"></MenuItem>
+                <MenuItem Header="Options">
+                    <MenuItem Command="{x:Static commands:FileManagerCommands.SettingsCommand}"/>
+                </MenuItem>
+                <MenuItem Header="Help">
+                    <MenuItem Command="{x:Static commands:FileManagerCommands.AboutCommand}"/>
+                </MenuItem>
+            </Menu>
+
+            <ContentControl Grid.Column="0" Grid.Row="1" Content="{Binding LeftPane}" ContentTemplateSelector="{StaticResource TemplateSelector}" x:Name="LeftPane"/>
+            <GridSplitter Grid.Column="1" Grid.Row="1"/>
+            <ContentControl Grid.Column="2" Grid.Row="1" Content="{Binding RightPane}" ContentTemplateSelector="{StaticResource TemplateSelector}" x:Name="RightPane"/>
+            
+            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Margin="0,3,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -82,4 +101,4 @@
             <KeyBinding Command="{x:Static commands:FileManagerCommands.OpenDriveDropdownCommand}" CommandParameter="{Binding ElementName=RightPane}" Key="F2" Modifiers="Alt"/>
         </Grid.InputBindings>
     </Grid>
-</controls:BorderlessWindow>
+</primitives:BorderlessWindow>
