Addition to the user settings

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/App.xaml
@@ -123,6 +123,11 @@
                             </Setter.Value>
                         </Setter>
                     </Style>
+                    
+                    <!-- Link -->
+                    <Style TargetType="{x:Type TextBlock}" x:Key="Link">
+                        <Setter Property="Foreground" Value="Blue"/>
+                    </Style>
 
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
