--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
@@ -1,49 +1,119 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.SettingsWindow"
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
                      xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                      xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                     Width="420" WindowStartupLocation="CenterOwner"
+                       xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
+                       Width="420" WindowStartupLocation="CenterOwner"
                      Title="Options">
+    <primitives:DialogBase.Resources>
+        <converters:ExpirationConverter x:Key="ExpirationConverter"/>
+        <DataTemplate x:Key="ExpirationTimeSpanTemplate">
+            <TextBlock Text="{Binding Converter={StaticResource ExpirationConverter}}"></TextBlock>
+        </DataTemplate>
+    </primitives:DialogBase.Resources>
     <Grid x:Name="LayoutRoot">
-        <Grid Margin="3">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <TabControl Grid.Row="0" Height="320">
+            <TabItem Header="Content recognition">
+                <Grid Margin="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
 
-            <GroupBox Header="Appearance" Grid.Row="0" Margin="5">
+                    <CheckBox Grid.Row="0" Content="Use jqe360.com for game recognition" IsChecked="{Binding UseJqe360}" Margin="0,0,0,10"
+                              x:Name="UseJqe360"/>
+                    
+                    <GroupBox Header="Cache expiration" Grid.Row="1">
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="120"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="26"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="26"/>
+                                <RowDefinition Height="26"/>
+                                <RowDefinition Height="26"/>
+                                <RowDefinition Height="26"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="26"/>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Grid.Row="0" Text="Profile" VerticalAlignment="Center"/>
+                            <ComboBox Grid.Row="0" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
+                                      SelectedItem="{Binding ProfileExpiration}" VerticalAlignment="Center"
+                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+
+                            <CheckBox Grid.Row="1" Content="Invalidate cache if source changes" IsChecked="{Binding ProfileInvalidation}" Margin="0,0,0,5"/>
+
+                            <TextBlock Grid.Row="2" Text="Recognized game" VerticalAlignment="Center"/>
+                            <ComboBox Grid.Row="2" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
+                                      SelectedItem="{Binding RecognizedGameExpiration}" VerticalAlignment="Center"
+                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                            
+                            <TextBlock Grid.Row="3" Text="Partially recognized game" VerticalAlignment="Center"/>
+                            <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
+                                      SelectedItem="{Binding PartiallyRecognizedGameExpiration}" VerticalAlignment="Center"
+                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"
+                                      IsEnabled="{Binding ElementName=UseJqe360, Path=IsChecked}"/>
+
+                            <TextBlock Grid.Row="4" Text="Unrecognized game" VerticalAlignment="Center"/>
+                            <ComboBox Grid.Row="4" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
+                                      SelectedItem="{Binding UnrecognizedGameExpiration}" VerticalAlignment="Center"
+                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+
+                            <TextBlock Grid.Row="5" Text="Xbox Live Content" VerticalAlignment="Center"/>
+                            <ComboBox Grid.Row="5" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
+                                      SelectedItem="{Binding XboxLiveContentExpiration}" VerticalAlignment="Center"
+                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+
+                            <CheckBox Grid.Row="6" Content="Invalidate cache if source changes" IsChecked="{Binding XboxLiveContentInvalidation}" Margin="0,0,0,5"/>
+
+                            <TextBlock Grid.Row="7" Text="Unknown Content" VerticalAlignment="Center"/>
+                            <ComboBox Grid.Row="7" Grid.Column="1" ItemsSource="{Binding ExpirationTimeSpans}"
+                                      SelectedItem="{Binding UnknownContentExpiration}" VerticalAlignment="Center"
+                                      ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
+                        </Grid>
+                    </GroupBox>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Operation">
+                <Grid Margin="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <CheckBox Grid.Row="0" Content="Use Remote Copy between NAS and FTP if able" Padding="5,0,0,0"
+                              IsChecked="{Binding UseRemoteCopy}"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Appearance">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
                     <CheckBox Grid.Row="0" Content="Disable Custom Window Chrome*" Padding="5,0,0,0" 
-                              IsChecked="{Binding DisableCustomChrome}"/>
+                                IsChecked="{Binding DisableCustomChrome}"/>
                 </Grid>
-            </GroupBox>
+            </TabItem>
+        </TabControl>
 
-            <GroupBox Header="Transfer" Grid.Row="1" Margin="5">
-                <Grid Margin="5">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+        <TextBlock Text="* needs restart to apply changes" Grid.Row="1" Margin="5,0,0,10"/>
 
-                    <CheckBox Grid.Row="0" Content="Use Direct Copy between a Network Drive and FTP if able" Padding="5,0,0,0"
-                              IsChecked="{Binding UseRemoteCopy}"/>
-                </Grid>
-            </GroupBox>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Width="75" Content="OK" Margin="5" Click="OkButtonClick"/>
+            <Button Width="75" Content="Cancel" Margin="5" Click="CancelButtonClick"/>
+        </StackPanel>
 
-            <TextBlock Text="* needs restart to apply changes" Grid.Row="2" Margin="5,0,0,10"/>
 
-            <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Width="75" Content="OK" Margin="5" Click="OkButtonClick"/>
-                <Button Width="75" Content="Cancel" Margin="5" Click="CancelButtonClick"/>
-            </StackPanel>
-        </Grid>
         <e:Interaction.Triggers>
         </e:Interaction.Triggers>
         <Grid.InputBindings>
