--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/NewConnectionDialog.xaml
@@ -1,11 +1,13 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.Dialogs.NewConnectionDialog"
-                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
-                     xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
-                     xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                     Width="320" WindowStartupLocation="CenterOwner" Title="Connection details">
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:validation="clr-namespace:Neurotoxin.Godspeed.Presentation.Validation;assembly=Neurotoxin.Godspeed.Presentation"
+                       xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Presentation.Converters;assembly=Neurotoxin.Godspeed.Presentation"
+                       Width="320" WindowStartupLocation="CenterOwner" Title="Connection details">
     <primitives:DialogBase.Resources>
+        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
         <Style TargetType="TextBox" x:Key="TextBoxStyle">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
@@ -57,9 +59,16 @@
                             </Popup>
                         </Grid>
                         <ControlTemplate.Triggers>
-                            <DataTrigger Binding="{Binding ElementName=adorner, Path=AdornedElement.(Validation.HasError)}" Value="True">
-                                <Setter TargetName="errorBorder" Property="IsOpen" Value="True"/>
+                            <DataTrigger Binding="{Binding ElementName=adorner, Path=AdornedElement.IsEnabled}" Value="False">
+                                <Setter TargetName="border" Property="Visibility" Value="Hidden"/>
                             </DataTrigger>
+                            <MultiDataTrigger>
+                                <MultiDataTrigger.Conditions>
+                                    <Condition Binding="{Binding ElementName=adorner, Path=AdornedElement.(Validation.HasError)}" Value="True"/>
+                                    <Condition Binding="{Binding ElementName=adorner, Path=AdornedElement.IsEnabled}" Value="True"/>
+                                </MultiDataTrigger.Conditions>
+                                <Setter TargetName="errorBorder" Property="IsOpen" Value="True"/>
+                            </MultiDataTrigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
@@ -73,6 +82,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -125,9 +135,10 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-
+        
         <TextBlock Grid.Column="0" Grid.Row="4" Text="Username:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="4" Margin="0,0,0,5" x:Name="Username" Style="{StaticResource TextBoxStyle}">
+        <TextBox Grid.Column="1" Grid.Row="4" Margin="0,0,0,5" x:Name="Username" Style="{StaticResource TextBoxStyle}"
+                 IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
             <TextBox.Text>
                 <Binding Path="Username" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
@@ -137,8 +148,9 @@
             </TextBox.Text>
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Text="Password:" VerticalAlignment="Center" Margin="0,0,0,15"/>
-        <TextBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="0,0,0,15" x:Name="Password" Style="{StaticResource TextBoxStyle}">
+        <TextBlock Grid.Column="0" Grid.Row="5" Text="Password:" VerticalAlignment="Center" Margin="0,0,0,5"/>
+        <TextBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Password" Style="{StaticResource TextBoxStyle}"
+                 IsEnabled="{Binding ElementName=AnonymousLogin, Path=IsChecked, Converter={StaticResource InverseBooleanConverter}}">
             <TextBox.Text>
                 <Binding Path="Password" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
@@ -148,7 +160,10 @@
             </TextBox.Text>
         </TextBox>
 
-        <StackPanel Grid.ColumnSpan="2" Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,5,0">
+        <CheckBox Grid.Column="1" Grid.Row="6" Margin="0,0,0,15" Content="Anonymous login" x:Name="AnonymousLogin"
+                  Checked="AnonymousLoginOnChange" Unchecked="AnonymousLoginOnChange"/>
+
+        <StackPanel Grid.ColumnSpan="2" Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,5,0">
             <Button Content="OK" Width="75" Margin="0,0,5,0" Click="OkButtonClick"/>
             <Button Content="Cancel" Width="75" Click="CancelButtonClick"/>
         </StackPanel>
