--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -70,6 +70,10 @@
             </TextBlock>
         </DockPanel>
 
-        <Button Grid.Row="5" HorizontalAlignment="Right" Width="75" Content="Cancel" Click="CancelButtonClick"/>
+        <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button Width="75" Content="Pause" Command="{Binding PauseCommand}" Margin="0,0,5,0" Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"/>
+            <Button Width="75" Content="Continue" Command="{Binding ContinueCommand}" Margin="0,0,5,0" Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}"/>
+            <Button Width="75" Content="Cancel" Click="CancelButtonClick"/>
+        </StackPanel>
     </Grid>
 </primitives:DialogBase>
