--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -4,7 +4,7 @@
                        xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
                        xmlns:dialogs="clr-namespace:Neurotoxin.Godspeed.Shell.Views.Dialogs"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="400" WindowStartupLocation="CenterOwner">
+                       Width="450" WindowStartupLocation="CenterOwner">
     <primitives:DialogBase.TaskbarItemInfo>
         <TaskbarItemInfo ProgressValue="{Binding TotalProgressDouble}" ProgressState="{Binding ProgressState}"/>
     </primitives:DialogBase.TaskbarItemInfo>
@@ -71,9 +71,12 @@
         </DockPanel>
 
         <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Width="75" Content="Pause" Command="{Binding PauseCommand}" Margin="0,0,5,0" Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"/>
-            <Button Width="75" Content="Continue" Command="{Binding ContinueCommand}" Margin="0,0,5,0" Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}"/>
-            <Button Width="75" Content="Cancel" Click="CancelButtonClick"/>
+            <Button Width="75" Content="Pause" Command="{Binding PauseCommand}" Margin="0,0,5,0" 
+                    Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"
+                    IsEnabled="{Binding Path=TargetPane.IsResumeSupported}"/>
+            <Button Width="75" Content="Continue" Command="{Binding ContinueCommand}" Margin="0,0,5,0" 
+                    Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}"/>
+            <Button Width="75" Content="Abort" Click="CancelButtonClick" x:Name="Abort"/>
         </StackPanel>
     </Grid>
 </primitives:DialogBase>
