--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/SettingsWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<primitives:DialogBase x:Class="Neurotoxin.Godspeed.Shell.Views.SettingsWindow"
-                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                     xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-                     xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                       xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                       xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
                        xmlns:converters="clr-namespace:Neurotoxin.Godspeed.Shell.Converters"
                        Width="420" WindowStartupLocation="CenterOwner"
                      Title="Options">
@@ -18,10 +18,11 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TabControl Grid.Row="0" Height="320">
+        <TabControl Grid.Row="0" Height="340">
             <TabItem Header="Content recognition">
                 <Grid Margin="5">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
@@ -82,6 +83,9 @@
                                       ItemTemplate="{StaticResource ExpirationTimeSpanTemplate}"/>
                         </Grid>
                     </GroupBox>
+                    
+                    <Button Grid.Row="2" Content="Clear Cache" Width="90" Margin="0,5,0,0"
+                            Command="{Binding ClearCacheCommand}" SnapsToDevicePixels="True"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Operation">
